index.css
html{
    height: 100%;
}

body{
    background-color: black;
    margin: 0;
    padding: 0;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
    font-family: sans-serif;
    height: 100%;
    
}

.container{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 100%;
}

.bodycontainer{
    display: flex;
    gap: 100px;
}

.gridcontainer{
    border: 5px solid red;
    height: 400px;
    width: 400px;
    display: flex;
    flex-direction: column;
    
}

.row{
    display: flex;
    flex: 1;
    
}

.square{
    border: 1px solid black;
    background-color: white;
    padding: 5px;
    flex: 1;
    
}

.colorpick{
    background-color: white;
    height: 100px;
    width: 100px;
    cursor: pointer;
    border-radius: 50%;
    overflow: hidden;
    -webkit-appearance: none;
    border: none;
    padding: 0;
}

input[type='color']::-webkit-color-swatch{
    border: none;
    border-radius: 50%;    
}

input[type='color']::-webkit-color-swatch-wrapper{
    padding: 0;
}

input[type='color']:hover, button:hover {
    transform: scale(1.05);
}

.btncontainer{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 30px ;
}

button{
    padding: 10px 20px;
    font-size: 20px;
    font-weight: 700;
    border-radius: 1em;
    width: 200px;
    border: 1px solid red;
}

.title{
    color: greenyellow;
    font-size: 50px;
    font-weight: 700;
}

.footer{
    color: white;
    font-size: 24px;
    font-weight: 900;
    margin-top: 200px;
}

a{
    color: greenyellow;
}

.sizevalue{
    color: greenyellow;
    font-size: 20px;
    font-weight: 900;
}

